<resources>
    <string name="app_name">LoginPage</string>
    <string name="remember_me_text">Remember me</string>
    <string name="kapaw_text">KaPaw</string>
    <string name="welcome_text">WELCOME</string>
    <string name="login_your_information_text">Login your information</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="choose_to_login_with_text">Choose to Login with</string>
    <string name="login_text">Login</string>
    <string name="paw_text">KaPaw</string>
    <string name="dashboard_text">DASHBOARD</string>
    <string name="faqs">FAQs</string>
    <string name="contacts">Contacts</string>
    <string name="first_aid">First Aid</string>
    <string name="nutrition">Nutrition</string>
    <string name="adoptions">Adoptions</string>
    <string name="checklist">Checklist</string>
    <string name="Frequently_text">Frequently Asked Questions</string>
    <string name="for_dogs_text">For Dogs</string>
    <string name="for_cats">For Cats</string>
    <string name="adoptions_text">Adoptions</string>
    <string name="ace_text">Ace</string>
    <string name="blossom_text">Blossom</string>
    <string name="coco_text">Coco</string>
    <string name="ikue_text">Ikue</string>
    <string name="ponpon_text">Ponpon</string>
    <string name="pumpkin_text">Pumpkin</string>
    <string name="faqs_for_dogs_text">Faqs For Dogs</string>
    <string name="_1_how_can_i_crate_train_my_puppy">1. How can I crate train my puppy?</string>
    <string name="start_as_soon_as_you_bring_your_new_puppy_home_purchase_a_crate_that_will_accommodate_him_as_he_grows_and_use_boxes_to_take_up_the_excess_space_remove_them_as_he_gets_bigger_give_him_an_interesting_toy_once_he_s_in_the_crate_that_he_only_gets_when_he_s_there">Start as soon as you bring your new puppy home. Purchase a crate that will accommodate him as he grows, and use boxes to take up the excess space. Remove them as he gets bigger. Give him an interesting toy once he’s in the crate that he only gets when he’s there.</string>
    <string name="the_best_age_to_start_training_a_dog_is_during_the_puppy_stage_which_is_typically_between_8_and_16_weeks_old_at_this_age_puppies_are_highly_adaptable_and_have_a_natural_desire_to_learn_making_it_easier_to_teach_them_new_things_additionally_early_training_can_help_prevent_behavior_problems_from_developing_later_on_text">The best age to start training a dog is during the puppy stage, which is typically between 8 and 16 weeks old. At this age, puppies are highly adaptable and have a natural desire to learn, making it easier to teach them new things. Additionally, early training can help prevent behavior problems from developing later on.</string>
    <string name="contacts_text">Contacts</string>
    <string name="search_contacts">Search contacts</string>
    <string name="a">A</string>
    <string name="angeles_pet_care_center">Angeles Pet Care Center</string>
    <string name="b">B</string>
    <string name="baguio_city_veterinary_office">Baguio City Veterinary Office</string>
    <string name="d">D</string>
    <string name="diskubre_pet_shop">Diskubre Pet Shop</string>
    <string name="g">G</string>
    <string name="gph_veterinary_services_inc">GPH Veterinary Services Inc.</string>
    <string name="h">H</string>
    <string name="hayop_kalinga_veterinary">Hayop Kalinga Veterinary</string>
    <string name="n">N</string>
    <string name="naguillian_veterinary_clinic">Naguillian Veterinary Clinic</string>
    <string name="todo">TODO</string>
    <string name="ni">N</string>
    <string name="neo_veterinary_services">Neo Veterinary Services</string>
    <string name="p">P</string>
    <string name="petrea_sure_veterinary">Petrea Sure Veterinary</string>
    <string name="t">T</string>
    <string name="the_pet_pro_veterinary">The Pet Pro Veterinary</string>
    <string name="first_aiid">First Aid</string>
    <string name="dog_first_aid_5_essential_emergency_skills">Dog First Aid: 5 Essential Emergency Skills</string>
    <string name="dog_first_aid_5_essential_emergency_skills1">Dog First Aid: 5 Essential Emergency Skills</string>
    <string name="dog_cpr_how_to_resuscitate_your_pet">Dog CPR: How to resuscitate your pet</string>
    <string name="dog_in_shock_what_to_do">Dog in shock: What to do?</string>
    <string name="choking_cat_what_to_do">Choking cat: What to do?</string>
    <string name="emergency_cat_care_10_first_aid_tips_for_cat_owners">Emergency Cat Care: 10 First Aid Tips for Cat Owners</string>
    <string name="firstaid1">firstaid1</string>
    <string name="firstaid2">firstaid2</string>
    <string name="firstaid3">firstaid3</string>
    <string name="firstaid4">firstaid4</string>
    <string name="firstaid5">firstaid5</string>
    <string name="heat_stroke_in_cats_symptoms_and_first_aid">Heat Stroke in Cats: Symptoms and First Aid</string>
    <string name="dog_first_aid_5_essential_emergency_skillss">Dog First Aid: 5 Essential Emergency Skills</string>
    <string name="firstaidvid">FirstAidVid</string>
    <string name="playbutton">playbutton</string>
    <string name="dr_jones_shows_you_his_top_5_essential_veterinary_emergency_skills_that_he_thinks_every_pet_parent_must_know">Dr. Jones shows you his TOP 5 essential veterinary emergency skills that he thinks every pet parent must know.</string>
    <string name="_1_knowing_if_it_s_an_emergency_or_not">1. Knowing if it\'s an emergency or not</string>
    <string name="bleeding_in_shock">Bleeding, in Shock</string>
    <string name="_2_bleeding_in_shock">2. Bleeding, in Shock</string>
    <string name="_3_dog_poisoning">3. Dog poisoning</string>
    <string name="_4_dog_choking_heimlich">4. Dog Choking-Heimlich</string>
    <string name="_5_bloat">5. Bloat</string>
    <string name="april_1_2023">April 1, 2023</string>
    <string name="veterinary_secrets">Veterinary Secrets</string>
    <string name="dr_jones">Dr. Jones</string>
    <string name="firstaid">firstaid2</string>
    <string name="playsbuttontwo">playbutton</string>
    <string name="playbuttontwo">playbutton</string>
    <string name="dog_cpr_how_to_resuscitate_your_pettwo">Dog CPR: How to resuscitate your pet</string>
    <string name="december_18_2015">December 18, 2015</string>
    <string name="empower_yourself_with_the_skills_and_confidence">Empower yourself with the skills and confidence to keep your pet safe and know how to help if they have an accident. First Aid for Life and onlinefirstaid.com have a variety of brilliant courses and materials to show you how to save your pet. This video shows you how to resuscitate your pet if they are unconscious and not breathing.</string>
    <string name="december_18_2025">December 18, 2025</string>
    <string name="first_aid_for_life">First Aid For Life</string>
    <string name="emma_hammett">Emma Hammett</string>
    <string name="this_video_shows_you_how_to_recognise_the_signs">This video shows you how to recognise the signs of shock and the best position to put your dog in when transferring to the Vet.</string>
    <string name="emergency_cat_care">Emergency Cat Care: 10 First Aid Tips for Cat Owners</string>
    <string name="january_7_2017">January 7, 2017</string>
    <string name="furrybuzz">FurryBuzz</string>
    <string name="as_a_cat_owner_you_want_to_keep_your_furry_friend_safe_and_healthy">As a cat owner, you want to keep your furry friend safe and healthy. However, accidents and emergencies can happen, and it\'s important to be prepared. In this video, we\'ll go over 10 essential first-aid tips every cat owner should know. From treating burns and wounds to addressing poisoning and seizures, we\'ll cover everything you need to know to keep your cat safe in an emergency. Our expert tips and tricks will help you feel confident in your ability to handle any situation. Whether you\'re a seasoned cat owner or a new pet parent, this video is a must-watch.</string>
    <string name="what_to_do_if_your_cat_is_choking_follow_this_quick_and_essential_guide_to_help_your_pet">What to do if your cat is choking. Follow this quick and essential guide to help your pet.</string>
    <string name="september_19_2023">September 19, 2023</string>
    <string name="firstaid6">firstaid6</string>
    <string name="august_22_2019">August 22, 2019</string>
    <string name="animalwised">AnimalWised</string>
    <string name="everything_about_heat_stroke_in_cats_in_this_new_animalwised_video">Everything about HEAT STROKE IN CATS . In this new AnimalWised video, we look at heat stroke in cats, a problem which can be fatal if not detected and treated on time . We teach you the most common symptoms of heat stroke in cats so you can recognize these issues quickly and known when basic first aid needs to be implemented. We also show you what the basic first aid steps are for heat stroke in cats.</string>
    <string name="_1_dog_poisoning_text" />
    <string name="cat_food_add_ins">Cat Food Add-Ins</string>
    <string name="things_you_can_add">Things you can add to your Cat’s food for a health boost:</string>
    <string name="calcium">Calcium</string>
    <string name="ingredients_to_avoid">Ingredients To Avoid</string>
    <string name="garlic">• Garlic</string>
    <string name="onions">• Onions</string>
    <string name="alcohol">• Alcohol</string>
    <string name="protein">Protein</string>
    <string name="poultry">• Poultry</string>
    <string name="chicken">• Chicken</string>
    <string name="turkey">• Turkey</string>
    <string name="duck">• Duck</string>
    <string name="beef">• Beef</string>
    <string name="pork">• Pork (avoid feeding pork products such as ham and bacon due to high sodium content)</string>
    <string name="lamb_and_veal">• Lamb and Veal</string>
    <string name="fish">• Fish</string>
    <string name="cottage_cheese">• Cottage Cheese</string>
    <string name="plain_yogurt">• Plain Yogurt (Paired with fruits which offer vitamins and antioxidants)</string>
    <string name="broccoli">• Broccoli</string>
    <string name="bones">• Bones</string>
    <string name="dark_leafy_greens">• Dark Leafy Greens</string>
    <string name="eggs">• Eggs</string>
    <string name="note">Note:</string>
    <string name="watch_for_signs">• Watch for signs such as vomiting or diarrhea as some pups are lactose intolerant.</string>
    <string name="avoid_or_use_caution_with_amounts_for_higher_fat_options_like_ice_cream_and_cheese">• Avoid or use caution with amounts for higher-fat options like ice cream and cheese.</string>
    <string name="almonds">• Almonds</string>
    <string name="avocados">• Avocados</string>
    <string name="chocolates">• Chocolates</string>
    <string name="coffee">• Coffee</string>
    <string name="cinnamon">• Cinnamon</string>
    <string name="grapes">• Grapes</string>
    <string name="macadamia_nuts">• Macadamia nuts</string>
    <string name="raisins">• Raisins</string>
    <string name="raw_yeast_dough">• Raw yeast dough</string>
    <string name="xylitol_and_artificial_sweeteners">• Xylitol and artificial sweeteners</string>
    <string name="mushrooms">• Mushrooms</string>
    <string name="lamb">• Lamb</string>
    <string name="shrimp_fully_cooked_with_shell_removed">• Shrimp (Fully cooked with shell removed)</string>
    <string name="tuna">• Tuna</string>
    <string name="eggs_in_moderation">• Eggs (In moderation)</string>
    <string name="avoid_cuts_of_meat">• Avoid cuts of meat that are too fatty or rich, or covered in garlic or seasonings.</string>
    <string name="remove_excess_fat_and_skin">• Remove excess fat and skin, and watch for poultry bones which can splinter.</string>
    <string name="use_meats_like_ham_in_moderation">• Use meats like ham in moderation which are usually high in sodium and fat.</string>
</resources>