<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ProteinTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/ingredients_to_avoid"
                android:textAlignment="center"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/AvoidText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/alcohol"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/almonds"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/avocados"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/chocolates"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/coffee"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/cinnamon"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/garlic"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/grapes"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/onions"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/macadamia_nuts"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/raisins"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/raw_yeast_dough"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/xylitol_and_artificial_sweeteners"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/AvoidText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/mushrooms"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>