<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ProteinTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/protein"
                android:textSize="48sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/ProteinText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/beef"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/turkey"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/chicken"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/lamb"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/Proteintext5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/pork"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/shrimp_fully_cooked_with_shell_removed"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/tuna"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/eggs_in_moderation"
                android:textSize="30sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/note"
                android:textSize="30sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/ProteinText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/avoid_cuts_of_meat"
                android:textSize="25sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/remove_excess_fat_and_skin"
                android:textSize="25sp"
                android:layout_marginStart="30dp"/>

            <TextView
                android:id="@+id/ProteinText12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/use_meats_like_ham_in_moderation"
                android:textSize="25sp"
                android:layout_marginStart="30dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>