<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/proteins"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ProteinTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/protein"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/poultry"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/chicken"
            android:textSize="25sp"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/turkey"
            android:textSize="25sp"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/duck"
            android:textSize="25sp"
            android:layout_marginStart="60dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/beef"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/pork"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/lamb_and_veal"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/ProteinText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/fish"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>